<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shadow Step</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_testmapfunction">TESTMAPFUNCTION</string>
    <string name="timer_zero">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="button_continue">Continue</string>
    <string name="trip_frag_title">ShadowStepp Trips</string>
    <string name="trip_frag_spinner_heading">Please Select A Previous Trip</string>
    <string name="trip_frag_label_new_trip">Or Create a New Trip</string>
    <string name="trip_frag_loadtrip">Load Trip</string>
    <string name="trip_frag_newtrip">Create New Trip</string>
    <string name="newtrip_title">Create a new SteppTrip</string>
    <string name="newtrip_choose_loc_start">Choose Starting Location</string>
    <string name="newtrip_choose_loc_end">Choose Ending Location</string>
    <string name="button_new_loc_start">New Start Location</string>
    <string name="button_new_loc_end">New End Location</string>
    <string name="button_loc_here">My Current Location</string>
    <string name="button_newtrip_locdone">Onward to Routes</string>
    <string name="splash_title">Welcome to ShadowStepp</string>
    <string name="splash_button_new_run">NEW RUN</string>
    <string name="splash_button_quickrun">QUICKRUN</string>

</resources>
