<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/splash_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_splash_new_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/splash_title"
        android:layout_below="@+id/splash_title"
        android:layout_marginTop="44dp"
        android:text="@string/splash_button_new_run" />

    <Button
        android:id="@+id/button_splash_quickrun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_splash_new_run"
        android:layout_alignRight="@+id/splash_title"
        android:text="@string/splash_button_quickrun" />

</RelativeLayout>
