<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/SFT_textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/trip_frag_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/SFT_spinner_triplist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SFT_textView_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <TextView
        android:id="@+id/SFT_textView_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SFT_spinner_triplist"
        android:layout_below="@+id/SFT_textView_title"
        android:layout_marginTop="21dp"
        android:text="@string/trip_frag_spinner_heading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/SFT_textView_label_new_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SFT_spinner_triplist"
        android:layout_below="@+id/SFT_button_loadTrip"
        android:layout_marginTop="43dp"
        android:text="@string/trip_frag_label_new_trip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/SFT_editText_newTripName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/SFT_textView_label_new_trip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/SFT_button_loadTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SFT_spinner_triplist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/trip_frag_loadtrip" />

    <Button
        android:id="@+id/SFT_button_newTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SFT_editText_newTripName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/trip_frag_newtrip" />

</RelativeLayout>
